kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-minio-deployment
  namespace: api-sql-reports
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: my-minio
  template:
    metadata:
      labels:
        app: my-minio
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio
        ports:
        - containerPort: 9000
        - containerPort: 9001
        command: ["minio", "server", "/data", "--console-address", ":9001"]
        volumeMounts:
        - name: minio-data
          mountPath: /data
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio-pvc
